cluster/apps/code-server/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: code-server
  namespace: code-server
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.code.local.danielvignoles.com`)
      kind: Rule
      services:
        - name: code-server
          port: 8080
    - match: Host(`code.local.danielvignoles.com`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: networking
      services:
        - name: code-server
          port: 8080
## default cert used in traefik namespace
#  tls:
#    secretName: local-danielvignoles-com-tls
